[package]
name = "iv"
version = "0.1.0"
edition = "2021"
authors = ["Plotnikov Maxim"]
description = "An imageboard viewer"
repository = "https://github.com/dazmaks/iv"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
html2md = "0.2.13"
